# superbot

./: .ci-trigger.md  .claude.json  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .session-journal-archive.md  .session-journal.md  C2-capability-invocation.md  C3-tests-parity-oracle.md  C4-ownership-mutation-event.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Procfile  SECURITY.md  permprobe-scratch.txt  pyproject.toml  requirements-dev.txt  requirements.txt  substrate.config.json  trigger.md
substrate-kit/: .gitignore  README.md  pyproject.toml
substrate-kit/src/: build_bootstrap.py
substrate-kit/src/engine/: adopt.py  cli.py  contextpack.py  derive.py  ledger.py  render.py
substrate-kit/src/engine/agents/: __init__.py  agents.py
substrate-kit/src/engine/checks/: __init__.py  check_docs.py  check_namespace.py  check_orientation_budget.py  check_seam_authority.py  check_session_log.py
substrate-kit/src/engine/economy/: __init__.py  engine.py  harvest.py  simulator.py
substrate-kit/src/engine/hooks/: __init__.py  post_edit.py  session_start.py  settings.py  stance_guard.py  stop_check.py
substrate-kit/src/engine/interview/: interview.py  question_bank.py  stages.py
substrate-kit/src/engine/lib/: atomicio.py  config.py  guardrail.py  modes.py  state.py
substrate-kit/src/engine/loop/: __init__.py  episodes.py  kpis.py  maintenance.py  reflections.py  review_seam.py  (+1 more)
substrate-kit/src/templates/: AGENT_ORIENTATION.md.tmpl  CLAUDE.md.tmpl  current-state.md.tmpl  ideas-README.md.tmpl  question-router.md.tmpl  session-journal.md.tmpl
(+5134 files in other folders)
