# substrate-kit — the downloadable-package form of the kit.
#
# The DISTRIBUTION name is the one-place-swappable placeholder "substrate-kit"
# (owner decision: the published name is chosen by the owner at extraction; do
# not publish to PyPI from here). The IMPORT name is `engine` — acceptable for
# an in-repo / venv-local install, renamed together with the distribution at
# extraction. The zero-dependency single file `dist/bootstrap.py` remains the
# primary distribution form; this package is the pip-installable alternative.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "substrate-kit"
version = "0.1.0"
description = "A portable, self-improving agent-memory substrate: staged onboarding interview, mode-paced workflow rollout, triggers/reflections/maintenance loop, context-economy engine, and doc/namespace/seam/budget checkers — stdlib-only."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
substrate-kit = "engine.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["engine*"]

[tool.setuptools.package-data]
engine = ["templates/*.tmpl"]
